syntax = "proto3";
package cosmos.accounts.vesting;

import "cosmos/accounts/vesting/vesting.proto";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "cosmossdk.io/x/accounts/vesting/types";

// QueryVestingAccountInfoRequest get vesting account info
message QueryVestingAccountInfoRequest {}

// QueryVestingAccountInfoResponse return vesting account info
message QueryVestingAccountInfoResponse {
  // original_vesting defines the value of the account original vesting.
  repeated cosmos.base.v1beta1.Coin original_vesting = 1
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];

  // delegated_free defines the value of the account delegated free.
  repeated cosmos.base.v1beta1.Coin delegated_free = 2
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];

  // delegated_free defines the value of the account delegated free.
  repeated cosmos.base.v1beta1.Coin delegated_vesting = 3
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];

  // end_time defines the value of the account vesting start time.
  google.protobuf.Timestamp start_time = 4 [(gogoproto.stdtime) = true];

  // end_time defines the value of the account vesting end time.
  google.protobuf.Timestamp end_time = 5 [(gogoproto.stdtime) = true];

  // vesting_coins defines the value of the account vesting coins.
  repeated cosmos.base.v1beta1.Coin vesting_coins = 6
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];

  // vested_vesting defines the value of the account vested coins.
  repeated cosmos.base.v1beta1.Coin vested_vesting = 7
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];

  // owner defines the value of the owner of the vesting account.
  string owner = 8;
}

// QueryVestingPeriodsRequest is used to query the periodic vesting account vesting periods.
message QueryVestingPeriodsRequest {}

// QueryVestingPeriodsResponse returns the periodic vesting account vesting periods.
message QueryVestingPeriodsResponse {
  // vesting_periods defines the value of the periodic vesting account vesting periods.
  repeated Period vesting_periods = 1;
}
