syntax = "proto3";
package cosmos.lockup;

import "amino/amino.proto";
import "google/protobuf/any.proto";
import "cosmos/lockup/lockup.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "cosmos/msg/v1/msg.proto";
import "google/protobuf/timestamp.proto";

option go_package = "cosmossdk.io/x/accounts/lockup/types";

//-------------------------------------- INIT --------------------------------------

// MsgInitLockupAccount defines a message that enables creating a lockup
// account.
message MsgInitLockupAccount {
  option (amino.name) = "cosmos-sdk/MsgInitLockupAccount";

  option (gogoproto.equal) = true;

  // owner of the vesting account
  string   owner                           = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  repeated cosmos.base.v1beta1.Coin amount = 2 [
    (gogoproto.nullable)     = false,
    (amino.dont_omitempty)   = true,
    (amino.encoding)         = "legacy_coins",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];

  // end of lockup
  google.protobuf.Timestamp end_time = 3
      [(gogoproto.nullable) = false, (amino.dont_omitempty) = true, (gogoproto.stdtime) = true];
  // start of lockup
  google.protobuf.Timestamp start_time = 4
      [(gogoproto.nullable) = false, (amino.dont_omitempty) = true, (gogoproto.stdtime) = true];
}

// MsgInitLockupAccountResponse defines the Msg/InitLockupAccount response type.
message MsgInitLockupAccountResponse {}

// MsgInitPeriodicLockingAccount defines a message that enables creating a periodic locking
// account.
message MsgInitPeriodicLockingAccount {
  option (amino.name) = "cosmos-sdk/MsgInitPeriodLockupAccount";

  option (gogoproto.equal) = false;

  // owner of the lockup account
  string owner = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // start of lockup
  google.protobuf.Timestamp start_time = 2
      [(gogoproto.nullable) = false, (amino.dont_omitempty) = true, (gogoproto.stdtime) = true];
  repeated Period locking_periods = 3 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgInitPeriodicLockingAccountResponse defines the Msg/InitPeriodicLockingAccount
// response type.
message MsgInitPeriodicLockingAccountResponse {}

// MsgExecuteMessages defines a message that enable lockup account to execute module messages
message MsgExecuteMessages {
  option (cosmos.msg.v1.signer) = "sender";

  string   sender                       = 1;
  repeated google.protobuf.Any messages = 2;
}

// MsgExecuteMessagesResponse defines the response for MsgExecuteMessages
message MsgExecuteMessagesResponse {
  repeated google.protobuf.Any responses = 1;
}
